--- a/client/src/scss/_globals.module.scss
+++ b/client/src/scss/_globals.module.scss
@@ -2,6 +2,7 @@
 //color
 $primary: #4B0082;
 $secondary: #39FF14;
+$light-text: #ffffff;
 // Base type
 $base-font-family: 'Roboto', 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !default;
 $base-font-size: 1rem !default;
