--- a/client/src/app/header/header.scss
+++ b/client/src/app/header/header.scss
@@ -12,7 +12,7 @@
   }
   
   .l-active-header {
-    color: $primary !important; 
+    color: globals.$primary !important; 
     text-decoration: underline;
     font-weight: bold;
   }
