--- a/client/src/app/trends/trends.scss
+++ b/client/src/app/trends/trends.scss
@@ -1,4 +1,4 @@
-@use 'src/scss/globals' as *;
+@use 'src/scss/globals.module' as globals;
 .l-main{
     position: relative;
     display: block;
@@ -13,9 +13,9 @@
     width: 100%;
     margin: auto;
     box-sizing: border-box;
-    @include max-screen-size;
-    @include breakpoint(md){
-        padding: $spacing--xl $spacing--xl 0;
+    @include globals.max-screen-size;
+    @include globals.breakpoint(md){
+        padding: globals.$spacing--xl globals.$spacing--xl 0;
     }
 }
 
@@ -26,7 +26,7 @@
     flex-direction: row;
     gap: 100px;
     box-sizing: inherit;
-    padding: $spacing--3xl $spacing--4xl;
+    padding: globals.$spacing--3xl globals.$spacing--4xl;
 
     &-content{
         width: 45%;
@@ -37,22 +37,22 @@
         gap: 20px;
 
         &-title{
-            font-size: $text--2xl;
-            color: $primary;
+            font-size: globals.$text--2xl;
+            color: globals.$primary;
             font-weight: 700;
             line-height: 1.2em;
-            margin-bottom: $spacing--lg;
+            margin-bottom: globals.$spacing--lg;
         }
 
         &-sub-header{
-            font-size: $text--sm;
+            font-size: globals.$text--sm;
             font-weight: 500;
-            margin-bottom: $spacing--lg;
+            margin-bottom: globals.$spacing--lg;
         }
 
         &-divider{
             width: 40%;
-            color: $primary;
+            color: globals.$primary;
             align-self: center;
             height: 20px;
         }
@@ -75,7 +75,7 @@
             width: 100%;
             object-fit: cover;
             height: 100%;
-            border-radius: $spacing-unit;
+            border-radius: globals.$spacing-unit;
         }
     }
 }
@@ -84,10 +84,10 @@
     background-color: #F3F3F3;
     width: 100%;
     display: block;
-    padding: $spacing--2xl;
+    padding: globals.$spacing--2xl;
 
     &-title {
-        font-size: $text--lg;
+        font-size: globals.$text--lg;
         line-height: 2.5;
         font-weight: bold;
         text-align: center;
@@ -100,12 +100,12 @@
         flex-wrap: wrap;
         position: relative;
         width: 100%;
-        padding: 0 $spacing--xl;
+        padding: 0 globals.$spacing--xl;
         flex-direction: column;
 
-        @include breakpoint(md){
+        @include globals.breakpoint(md){
             flex-direction: row;
-            padding: 0 $spacing--2xl;
+            padding: 0 globals.$spacing--2xl;
         }
 
         &--content {
@@ -117,22 +117,22 @@
             min-height: 1px;
             max-height: 250px;
             position: relative;
-            padding: $spacing--xl;
+            padding: globals.$spacing--xl;
 
             &_icon {
                 .MuiSvgIcon-root {
                     width: 34px;
                     height: 34px;
-                    fill: $primary;
-                    margin-bottom: $spacing--md;
+                    fill: globals.$primary;
+                    margin-bottom: globals.$spacing--md;
                 }
 
                 width: 100%;
-                margin-bottom: $spacing--md;
+                margin-bottom: globals.$spacing--md;
             }
 
             &__sub-header {
-                margin-bottom: $spacing--md;
+                margin-bottom: globals.$spacing--md;
 
                 h4 {
                     font-size: 22px;
