--- a/client/src/components/search-modal/search-modal.scss
+++ b/client/src/components/search-modal/search-modal.scss
@@ -1,8 +1,13 @@
-.modal{
-  height: 250px;;
-}
+@use 'src/scss/globals.module' as globals;
+
 .l-search-modal{
   width: 100%;
   display: block;
   position: relative;
+
+  h1{
+    font-size: globals.$text--lg;
+    margin-bottom: globals.$spacing--md;
+    font-weight: 600;
+  }
 }
