--- a/client/src/scss/settings/_colors.hc.settings.scss
+++ b/client/src/scss/settings/_colors.hc.settings.scss
@@ -102,6 +102,12 @@ $nutrition-secondary: #fe8b6e;
 $km-primary: #4dd39f;
 $km-secondary: #fe8b6e;
 $nutrition-accent: $ring-accent;
+$color-sidebar-active: #3498DB;
+$color-main-bg: #F9FAFB;
+$container-background: #d9e4e8;
+$color-sidebar: #2C3E50;
+$color-sidebar-text: #FFFFFF;
+$color-sidebar-hover: #34495E;
 ///////////////////////////////////////////
 // GENERATE MATERIAL PALETTES
 ///////////////////////////////////////////
