--- a/client/src/app/support/support.scss
+++ b/client/src/app/support/support.scss
@@ -1,4 +1,4 @@
-@use 'src/scss/globals' as *;
+@use 'src/scss/globals.module' as globals;
 .l-main{
     position: relative;
     display: block;
@@ -13,9 +13,9 @@
     width: 100%;
     margin: auto;
     box-sizing: border-box;
-    @include max-screen-size;
-    @include breakpoint(md){
-        padding: $spacing--xl $spacing--xl 0;
+    @include globals.max-screen-size;
+    @include globals.breakpoint(md){
+        padding: globals.$spacing--xl globals.$spacing--xl 0;
     }
 }
 
@@ -26,7 +26,7 @@
     flex-direction: row;
     gap: 100px;
     box-sizing: inherit;
-    padding: $spacing--3xl $spacing--4xl;
+    padding: globals.$spacing--3xl globals.$spacing--4xl;
 
     &-content{
         width: 45%;
@@ -37,22 +37,22 @@
         gap: 20px;
 
         &-title{
-            font-size: $text--2xl;
-            color: $primary;
+            font-size: globals.$text--2xl;
+            color: globals.$primary;
             font-weight: 700;
             line-height: 1.2em;
-            margin-bottom: $spacing--lg;
+            margin-bottom: globals.$spacing--lg;
         }
 
         &-sub-header{
-            font-size: $text--sm;
+            font-size: globals.$text--sm;
             font-weight: 500;
-            margin-bottom: $spacing--lg;
+            margin-bottom: globals.$spacing--lg;
         }
 
         &-divider{
             width: 40%;
-            color: $primary;
+            color: globals.$primary;
             align-self: center;
             height: 20px;
         }
@@ -75,7 +75,7 @@
             width: 100%;
             object-fit: cover;
             height: 100%;
-            border-radius: $spacing-unit;
+            border-radius: globals.$spacing-unit;
         }
     }
 }
