--- a/client/src/scss/settings/_colors.hc.settings.scss
+++ b/client/src/scss/settings/_colors.hc.settings.scss
@@ -18,6 +18,7 @@ $dark-background: #181e29;
 $dark-offset-background: #212835;
 // Role: For brand color and prominent elements
 $primary: #4B0082;
+$primary-background: #3C1A5B;
 $secondary: #39FF14;
 $primary-support: $primary;
 // Role: For instant actions elements
