--- a/client/src/app/landing/landing.scss
+++ b/client/src/app/landing/landing.scss
@@ -22,16 +22,24 @@
 }
 
 .l-features {
-    background-color: #F3F3F3;
+    color: $light-text;
     width: 100%;
     display: block;
-    padding: globals.$spacing--4xl;
-   
+    padding-bottom: globals.$spacing--3xl;
+    @include globals.max-screen-size;
     &-title {
-        font-size: globals.$text--lg;
-        line-height: 2.5;
-        font-weight: bold;
-        text-align: center;
+        width: 100%;
+        display: flex;
+        padding: 0 globals.$spacing--3xl;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+       
+        h2{
+            font-size: globals.$text--xl;
+            line-height: 2.5;
+            font-weight: bold;
+        }
     }
 
     &-slot {
@@ -43,6 +51,7 @@
         width: 100%;
         padding: 0 globals.$spacing--2xl;
         flex-direction: column;
+        gap: 5px;
         @include globals.max-screen-size;
 
         @include globals.breakpoint(md){
@@ -58,13 +67,17 @@
             display: flex;
             min-height: 1px;
             position: relative;
+            background-color: #2B0F47;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            border: 1px solid globals.$primary;
+            border-radius: 5px;
             padding: globals.$spacing--xl;
 
             &_icon {
                 .MuiSvgIcon-root {
                     width: 34px;
                     height: 34px;
-                    fill: globals.$primary;
+                    fill: globals.$light-text;
                     margin-bottom: globals.$spacing--md;
                 }
 
@@ -78,8 +91,7 @@
                 h4 {
                     font-size: 22px;
                     font-weight: bold;
-                    color: #354050;
-
+                    color: globals.$light-text;
                 }
             }
 
@@ -103,79 +115,18 @@
     gap: 100px;
     box-sizing: inherit;
     padding: globals.$spacing--3xl globals.$spacing--4xl;
-    background-color: #f0eaf4;
-
-    &-content {
-        width: 45%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 20px;
-
-        &-title {
-            font-size: globals.$text--2xl;
-            color: globals.$primary;
-            font-weight: 700;
-            line-height: 1.2em;
-            margin-bottom: globals.$spacing--lg;
-        }
-
-        &-sub-header {
-            font-size: globals.$text--sm;
-            font-weight: 500;
-            margin-bottom: globals.$spacing--lg;
-        }
-
-        &-divider {
-            width: 40%;
-            color: globals.$primary;
-            align-self: center;
-            height: 20px;
-        }
-
-        &-cta {
-            height: 36px;
-            width: 150px;
-            padding: 15px 20px;
-            line-height: 1;
-            font-size: 20px;
-            display: inline-flex;
-        }
-    }
+    color: $light-text;
+    @include globals.max-screen-size;
 
     &-background {
-        width: 45%;
-        // height: 300px;
-        max-width: 40%;
+        width: 100%;
+        height: 450px;
 
         img {
             width: 100%;
             object-fit: cover;
             height: 100%;
             border-radius: globals.$spacing-unit;
-        }
-    }
-}
-
-.l-services {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    gap: 20px;
-    padding: globals.$spacing--lg;
-
-    @include globals.breakpoint(md) {
-        flex-direction: row;
-        padding: 3.35rem globals.$spacing--md;
-    }
-
-    .MuiCard-root {
-        width: 100%;
-
-        @include globals.breakpoint(md) {
-            width: 23%;
         }
     }
 }
