--- a/client/src/app/scanner/scanner.scss
+++ b/client/src/app/scanner/scanner.scss
@@ -1,4 +1,5 @@
 @use 'src/scss/globals.module' as globals;
+
 .l-main{
     position: relative;
     display: block;
@@ -19,7 +20,7 @@
     }
 }
 
-.l-hero{
+.l-hero {
     width: 100%;
     position: relative;
     display: flex;
@@ -27,51 +28,14 @@
     gap: 100px;
     box-sizing: inherit;
     padding: globals.$spacing--3xl globals.$spacing--4xl;
+    color: $light-text;
+    @include globals.max-screen-size;
 
-    &-content{
-        width: 45%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 20px;
+    &-background {
+        width: 100%;
+        height: 450px;
 
-        &-title{
-            font-size: globals.$text--2xl;
-            color: globals.$primary;
-            font-weight: 700;
-            line-height: 1.2em;
-            margin-bottom: globals.$spacing--lg;
-        }
-
-        &-sub-header{
-            font-size: globals.$text--sm;
-            font-weight: 500;
-            margin-bottom: globals.$spacing--lg;
-        }
-
-        &-divider{
-            width: 40%;
-            color: globals.$primary;
-            align-self: center;
-            height: 20px;
-        }
-
-        &-cta{
-            height: 36px;
-            width: 150px;
-            padding: 15px 20px;
-            line-height: 1;
-            font-size: 20px;
-            display: inline-flex;
-        }
-    }
-
-    &-background{
-        width: 45%;
-        // height: 300px;
-        max-width: 40%;
-        img{
+        img {
             width: 100%;
             object-fit: cover;
             height: 100%;
